[gd_scene load_steps=2 format=3 uid="uid://dut6dyf4yb40i"]

[ext_resource type="Script" uid="uid://dkcu2blfucfaa" path="res://test.gd" id="1"]

[node name="DisplaySettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="SettingsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="SettingsContainer"]
layout_mode = 2
text = "Display Settings"
horizontal_alignment = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="SettingsContainer"]
layout_mode = 2

[node name="FullscreenSetting" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/FullscreenSetting"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fullscreen"

[node name="FullscreenCheckbox" type="CheckBox" parent="SettingsContainer/FullscreenSetting"]
layout_mode = 2

[node name="BorderlessSetting" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/BorderlessSetting"]
layout_mode = 2
size_flags_horizontal = 3
text = "Borderless Window"

[node name="BorderlessCheckbox" type="CheckBox" parent="SettingsContainer/BorderlessSetting"]
layout_mode = 2

[node name="ResolutionSetting" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/ResolutionSetting"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="SettingsContainer/ResolutionSetting"]
layout_mode = 2

[node name="DynamicResolutionSetting" type="VBoxContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsContainer/DynamicResolutionSetting"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/DynamicResolutionSetting/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dynamic Resolution"

[node name="DynamicResolutionCheckbox" type="CheckBox" parent="SettingsContainer/DynamicResolutionSetting"]
layout_mode = 2
text = "Enable Dynamic Resolution Scaling"

[node name="ScaleSlider" type="HSlider" parent="SettingsContainer/DynamicResolutionSetting"]
layout_mode = 2
min_value = 0.5
max_value = 1.0
step = 0.05
value = 1.0

[node name="ScaleLabel" type="Label" parent="SettingsContainer/DynamicResolutionSetting"]
layout_mode = 2
text = "Scale Factor: 100%"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="SettingsContainer"]
layout_mode = 2

[node name="ApplyButton" type="Button" parent="SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Apply Settings"
